** 1.10.x

1.9.6 --> 1.10.0
===============

* Add the newly devised <%>...</%> syntax to the XmlSyntax support.
  This causes changes to pretty much everything, including adding
  a case to the AST which prompts the major version bump.


** 1.9.x

1.9.5 --> 1.9.6
===============

* Fix a bug (#203) where the lexer loops on malformed quasi-quoters.

* Fix a bug with pretty-printing RULES pragmas.

1.9.4 --> 1.9.5
===============

* Fix a bug where deriving clauses for GADT-style data declarations
  were not properly indented.

* Pretty-printing patterns is now more accurate in inserting (and not
  inserting) parentheses when needed.

1.9.3 --> 1.9.4
===============

* Pretty-printer now inserts parentheses in clever places when 
  printing kinds.

* Pretty-printing expressions is now far more accurate in inserting
  (and not inserting) parentheses when needed.
  
* Pretty-printing negative expressions no longer inserts a superfluous
  space between the - and the expression.

1.9.2 --> 1.9.3
===============

* Constructors for newtype declarations must now have exactly one
  argument. This is only when using the classic syntax, not with
  GADT-style syntax.

* Fix a bug where preceding commas in tuple sections were counted
  one too few.

1.9.1 --> 1.9.2
===============

* Fix a bug with pretty-printing lexer tokens.

* Fix a bug where non-colon TypeOperators could not be used in
  prefix mode.

1.9.0 --> 1.9.1
===============

* Export parseFileContentsWithExts from .Exts.

1.8.2 --> 1.9.0
===============

* OptionPragma is renamed to the more descriptive ModulePragma,
  and adds a constructor AnnModulePragma for handling ANN pragmas
  preceding module header.

* Add instances for Eq/Ord/Data/Typeable for Fixity.

* Add 'parseFileWithComments' and 'parseFileContentsWithComments'
  to L.H.Exts .

* More informative error messages when HSX tags are mismatched.



** 1.8.x

1.8.1 --> 1.8.2
===============
